//
// Copyright 2018 Peter renken.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "EtAlii.Ubigia.Api.Transport.Grpc";
option java_outer_classname = "Ubigia";
option objc_class_prefix = "Ubigia";
option csharp_namespace = "EtAlii.Ubigia.Api.Transport.Grpc";

package EtAlii.Ubigia.Api.Transport.Grpc;

// The Authentication Grpc service definition.
service AuthenticationGrpcService 
{
	// Try to authenticate.
	rpc Authenticate (AuthenticationRequest) returns (AuthenticationResponse) {}
	// Try to authenticate as another user.
	rpc AuthenticateAs (AuthenticationRequest) returns (AuthenticationResponse) {}

	rpc GetAccountForAuthenticationToken(AuthenticationTokenRequest) returns (AuthenticationTokenResponse) {}

	rpc GetLocalStorage(LocalStorageRequest) returns (LocalStorageResponse) {}
	
}

message AuthenticationRequest
{
	string AccountName = 1;
	string Password = 2;
	string hostIdentifier = 3;
}

message AuthenticationResponse
{
	string AuthenticationToken = 1;
}

message AuthenticationTokenRequest
{
	string AuthenticationToken = 1;
}

message AuthenticationTokenResponse
{
	string AccountName = 1;
}

message LocalStorageRequest
{
}

message LocalStorageResponse
{
	string StorageName = 1;
}

